tests/sksl/errors/ErrorsInDeadCode.dsl.glsl
### Compilation failed:

error: unknown identifier 'x'

error: unknown identifier 'x'

error: unknown identifier 'x'

error: unknown identifier 'x'

4 errors
